# mpc-simulations

./: .gitignore  README.md  poetry.lock.bak  pyproject.toml
mpc_simulations/: MPC_simulations.py  __init__.py  body_class.py  mpl_functions.py  wing_twist_class.py
notebook/: clean
notebook/weights/: muscle_wing_weights_new.h5
