[tool.poetry]
name = "mpc-simulations"
version = "0.1.0"
description = "Johan Melis's model predictive control simulations"
license = "MIT"
authors = ["Johan Melis <jmelis@caltech.edu>"]
readme = "README.md"
packages = [{include = "mpc_simulations"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.12.0"
keras = "2.12.0"
matplotlib = "^3.7.1"
vtk = "^9.2.6"
casadi = "^3.6.2"
opencv-python = "^4.7.0.72"
geomdl = "^5.3.1"
h5py = "^3.8.0"
#notebook = "^6.5.4"
notebook = "^7.0.3"
onnx = "^1.14"
asyncua = "^1.0.2"
do-mpc = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
